# simple-tk-stopwatch

./: README.md  pyproject.toml  simple-tk-stopwatch.py
src/simple_tk_stopwatch/: app.py
