[project]
name = "simple-tk-stopwatch"
version = "0.1.1"
description = "Simple stopwatch window in tkinter"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "twine>=6.1.0",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = { text = "MIT" }


[project.urls]
Homepage = "https://github.com/shockwavebot/simple-tk-stopwatch"

[project.scripts]
simple-tk-stopwatch = "simple_tk_stopwatch.app:main"
